<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_ControlMode" Id="{dcec8b4d-9fb9-0476-379a-74adac00c3b0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ControlMode :
(
	MANUAL 		:= 0,
	AUTOMATIC 	:= 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>